--- a/src/components/initialScreen/InitialScreen.css
+++ b/src/components/initialScreen/InitialScreen.css
@@ -38,6 +38,12 @@ button{
 }
 .active{
     background-color: #FB6B6B;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
     position: absolute;
     z-index: 5;
 }
