--- a/src/components/mainScreen/MainScreen.css
+++ b/src/components/mainScreen/MainScreen.css
@@ -1,5 +1,51 @@
 .mainSreen{
     display: flex;
     position: absolute;
+    width: 100%;
     z-index: 4;
+}
+header{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 19px;
+    margin-bottom: 50px;
+}
+header text{
+    font-family: 'Righteous';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 31px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: -0.012em;
+    color: #FFFFFF;
+}
+header img{
+    width: 56px;
+    height: 60px;
+    margin-top: 25px;
+    margin-right: 20px;
+    margin-left: 0;
+}
+
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 80px;
+    background: #FFFFFF;
+    box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.05);
+
+    font-family: 'Recursive';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 14px;
+    color: #333333;
 }
