--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 main{
     display: flex;
     justify-content: center;
-    
+    width: 100%;
     background-color: #FB6B6B;
     height: 100vh;
     position: relative;
