--- a/src/components/ask/Ask.css
+++ b/src/components/ask/Ask.css
@@ -1,7 +1,25 @@
 .title-active{
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     cursor: pointer;
-    background: rgb(239, 241, 238);
+    padding: 0 10px;
+    width: 100%;
+    height: 60px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    margin-bottom: 10px;
+
+    font-family: 'Recursive';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 14px;
+    color: #333333;
+}
+ion-icon{
+    font-size: 28px;
 }
 .title-disable{
     display:none;
