--- a/src/components/mainScreen/MainScreen.css
+++ b/src/components/mainScreen/MainScreen.css
@@ -1,7 +1,9 @@
-.mainSreen{
+.mainScreen{
     display: flex;
+    align-items: center;
+    flex-direction: column;
     position: absolute;
-    width: 100%;
+    width: 80%;
     z-index: 4;
 }
 header{
