--- a/src/components/ask/Ask.css
+++ b/src/components/ask/Ask.css
@@ -27,6 +27,28 @@ ion-icon{
 .ask-active{
     display: flex;
     cursor: pointer;
+    width: 100%;
+    height: 120px;
+    margin-bottom: 10px;
+    padding: 25px 10px;
+    background: #FFFFD5;
+    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    position: relative;
+
+    font-family: 'Recursive';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 14px;
+}
+.ask-active img{
+    display: flex;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    width: 25px;
+    height: 18px;
 }
 .ask-disable{
     display: none;
