--- a/src/components/questionAnswer/QuestionAnswer.css
+++ b/src/components/questionAnswer/QuestionAnswer.css
@@ -32,6 +32,7 @@
 
 .answer-active{
     display: flex;
+    justify-content: center;
     cursor: pointer;
     width: 100%;
     height: 120px;
@@ -47,4 +48,41 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 14px;
+}
+.answer-disable{
+    display: none;
+}
+
+.buttons{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    position: absolute;
+    bottom: 15px;
+    right: 1px;
+}
+
+.buttons button{
+    color: #FFFFFF;
+    width: 105px;
+    height: 54px;
+    border-radius: 5px;
+    font-family: 'Recursive';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+}
+.buttons .b-red{
+    background: #FF3030;;
+}
+.buttons .b-yellow{
+    background:  #FF922E;
+}
+.buttons .b-green{
+    background:  #2FBE34;
 }
