--- a/src/components/questionAnswer/QuestionAnswer.css
+++ b/src/components/questionAnswer/QuestionAnswer.css
@@ -78,7 +78,7 @@
     border: none;
 }
 .buttons .b-red{
-    background: #FF3030;;
+    background: #FF3030;
 }
 .buttons .b-yellow{
     background:  #FF922E;
