--- a/src/components/mainScreen/MainScreen.css
+++ b/src/components/mainScreen/MainScreen.css
@@ -41,9 +41,9 @@ footer{
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 80px;
     background: #FFFFFF;
     box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.05);
+    padding: 30px 0;
 
     font-family: 'Recursive';
     font-style: normal;
@@ -64,4 +64,21 @@ footer .yellow{
 }
 footer .red{
     color: #FF3030;
+}
+
+.disable{
+    display: none;
+}
+
+section div img{
+    width: 22px;
+    height: 22px;
+    margin-right: 10px;
+}
+.image-status{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
 }
