--- a/src/components/ask/Ask.css
+++ b/src/components/ask/Ask.css
@@ -37,3 +37,9 @@ ion-icon{
     color: #2FBE34;
     text-decoration-line: line-through;
 }
+
+@media (min-width: 500px){
+    .title-active, .ask-active, .answer-active{
+        width: 50%;
+    }
+}
