--- a/src/components/mainScreen/MainScreen.css
+++ b/src/components/mainScreen/MainScreen.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     position: absolute;
     width: 80%;
-    z-index: 4;
+    z-index: 4;;
 }
 header{
     display: flex;
@@ -32,6 +32,22 @@ header img{
     margin-left: 0;
 }
 
+.asks{
+    width: 100%;
+    height: 570px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+@media (min-width: 500px){
+    .asks{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+}
 footer{
     display: flex;
     justify-content: center;
@@ -43,7 +59,7 @@ footer{
     width: 100%;
     background: #FFFFFF;
     box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.05);
-    padding: 30px 0;
+    padding: 25px 0;
 
     font-family: 'Recursive';
     font-style: normal;
@@ -80,5 +96,5 @@ section div img{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
